tests/rosetta/out/Python/15-puzzle-solver.error
run: exit status 1
Traceback (most recent call last):
  File "/tmp/15-puzzle-solver.py", line 4, in <module>
    (
TypeError: 'NoneType' object is not callable
