tests/rosetta/out/Python/15-puzzle-solver.py
# Generated by Mochi compiler v0.10.26 on 2025-07-16T09:56:02Z
testpkg = {"Add": lambda a, b: a + b, "Pi": 3.14, "Answer": 42}
print(
    (
        testpkg.get("FifteenPuzzleExample")
        if isinstance(testpkg, dict)
        else getattr(testpkg, "FifteenPuzzleExample")
    )()
)
